--- a/dir.props
+++ b/dir.props
@@ -163,4 +163,6 @@
     <SymbolPackageOutputPath Condition="'$(SymbolPackageOutputPath)'==''">$(PackageOutputPath)symbols/</SymbolPackageOutputPath>
   </PropertyGroup>
 
+  <Import Project="platforms\platforms.props" />
+
 </Project>
